Add website content to index.html and basic css styling

--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Test</title>
+        <head>
+            <link rel="stylesheet" href="css/main.css">
+          </head>
+        <title>Google Homepage</title>
     </head>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Store</a></li>
+            </ul>
+            </nav>
+        </header>
     <body>
-        <h1>Test</h1>
-        hello
+        <img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'>
+        <input name='searchbox' type=text>
+        <button name='search-btn'>Google Search</button><button name='feeling-lucky-btn'>I'm feeling lucky</button>
     </body>
+    <footer>           
+        <ul>
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">How Search works</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+    </footer>
 </html>
