--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+
     <head>
-        <meta charset="UTF-8">
-        <head>
-            <link rel="stylesheet" href="css/main.css">
-          </head>
-        <title>Google Homepage</title>
+      <link rel="stylesheet" href="css/reset.css" />
+      <link rel="stylesheet" href="css/main.css" />
     </head>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Store</a></li>
-            </ul>
-            </nav>
-        </header>
-    <body>
-        <img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'>
-        <input name='searchbox' type=text>
-        <button name='search-btn'>Google Search</button><button name='feeling-lucky-btn'>I'm feeling lucky</button>
-    </body>
-    <footer>           
+    <title>Google Homepage</title>
+  </head>
+  <div class="container">
+    <header class="header">
+      <nav>
         <ul>
-            <li><a href="#">Advertising</a></li>
-            <li><a href="#">Business</a></li>
-            <li><a href="#">How Search works</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Settings</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Store</a></li>
         </ul>
+      </nav>
+    </header>
+    <body>
+      <div class="item">
+        <img
+          src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+        />
+      </div>
+      <div class="item">
+        <div class="search-box">
+          <input class="search-input" name="searchbox" type="text" />
+        </div>
+        <div class="item">
+          <button class="btn">Google Search</button>
+          <button class="btn">I'm Feeling Lucky</button>
+        </div>
+      </div>
+    </body>
+    <footer class="item">
+      <ul>
+        <li><a href="#">Advertising</a></li>
+        <li><a href="#">Business</a></li>
+        <li><a href="#">How Search works</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Settings</a></li>
+      </ul>
     </footer>
+  </div>
 </html>
