--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
+
     <title>Google Homepage</title>
   </head>
   <body>
@@ -20,14 +25,19 @@
       <main>
         <div class="item">
           <img
+            class="google-logo"
             src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
           />
         </div>
         <div class="item">
           <div class="search-box">
+            <span class="material-icons-outlined google-icon"> search </span>
+            <!-- <img class="search-icon" src="images/google-search.png" alt="" /> -->
             <input class="search-input" name="searchbox" type="text" />
+            <span class="material-icons-outlined google-icon"> clear </span>
           </div>
-          <div class="item">
+
+          <div class="item button-container">
             <button class="btn">Google Search</button>
             <button class="btn">I'm Feeling Lucky</button>
           </div>
