--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li><a href="#">Store</a></li>
             <div class="google-sign-in google-icon">
               <ul>
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Images</a></li>
+                <li><a class="sign-in-link" href="#">Gmail</a></li>
+                <li><a class="sign-in-link" href="#">Images</a></li>
 
                 <span class="material-icons-outlined"> apps </span>
                 <img
@@ -83,14 +83,14 @@
       <footer>
         <ul>
           <div class="footer">
-            <li><a href="#">Advertising</a></li>
-            <li><a href="#">Business</a></li>
-            <li><a href="#">How Search works</a></li>
+            <li><a class="footer-link" href="#">Advertising</a></li>
+            <li><a class="footer-link" href="#">Business</a></li>
+            <li><a class="footer-link" href="#">How Search works</a></li>
           </div>
           <div class="footer">
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a class="footer-link" href="#">Privacy</a></li>
+            <li><a class="footer-link" href="#">Terms</a></li>
+            <li><a class="footer-link" href="#">Settings</a></li>
           </div>
         </ul>
       </footer>
